[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rebalance"
version = "0.4.0"
description = "A calculator which tells you how to split your investment amongst your portfolio's assets based on your target asset allocation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Karl Lundgren", email = "k.github@lundgrens.net" }]
dependencies = [
    "apprise==1.10.0",
    "numpy==2.4.4",
    "requests==2.33.1",
    "cvxpy==1.8.2",
    "yfinance==1.3.0",
    "pydantic==2.13.3",
    "rich==15.0.0",
    "tenacity==9.1.4",
    "loguru==0.7.3",
]

[project.urls]
Homepage = "https://github.com/kallegrens/rebalance"

[project.scripts]
rebalance = "rebalance.__main__:main"
rebalance-monitor = "rebalance.monitor:main"

[dependency-groups]
dev = ["pytest==9.0.3", "pytest-cov==7.1.0", "ruff==0.15.12", "ty==0.0.34"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ty.analysis]
allowed-unresolved-imports = ["cvxpy", "yfinance"]

[tool.pytest.ini_options]
testpaths = ["rebalance/tests"]
markers = [
    "integration: requires live network access (deselect with -m 'not integration')",
]

[tool.coverage.run]
source = ["rebalance"]
omit = ["rebalance/tests/*"]

[tool.coverage.report]
show_missing = true
